Correction pour les dates et point d'entrée pour les listes filtrées de média (par artiste et par collaborateur)
