# api/nodejs-server/api/swagger.yaml
@@ -1610,6 +1610,58 @@ paths:
       security:
       - jwt: []
       x-swagger-router-controller: "Media"  
+  /media/artiste-createur/{uuid}:
+    get:
+      tags:
+      - "Media"
+      description: "Récupère la liste filtrée par utilisateur et ordonnée par identifiant unique"
+      operationId: "listeCreateur"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "The artwork agreement's unique ID"
+        required: true
+        type: "integer"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            $ref: "#/definitions/medias"
+        400:
+          description: "Bad request"
+        403:
+          description: "Permission denied"
+        404:
+          description: "Endpoint not found"
+        500:
+          description: "An unknown error occured"
+      x-swagger-router-controller: "Media"
+  /media/artiste-collaborateur/{uuid}:
+    get:
+      tags:
+      - "Media"
+      description: "Récupère la liste filtrée par utilisateur et ordonnée par identifiant unique"
+      operationId: "listeCollaborations"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "The artwork agreement's unique ID"
+        required: true
+        type: "integer"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            $ref: "#/definitions/medias"
+        400:
+          description: "Bad request"
+        403:
+          description: "Permission denied"
+        404:
+          description: "Endpoint not found"
+        500:
+          description: "An unknown error occured"
+      x-swagger-router-controller: "Media"
   /media/{mediaId}:
     get:
       tags:
